--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.0",
     "mongoose": "^6.3.1"
   }
 }
